# StringOp

./: .gitignore  .gitmodules  README.md  backpack_person_tracking.py  cmd.sh  compare_features.py  controller.py  depth_estimation.py  features_run1.pkl  features_run2.pkl  features_run3.pkl  final_person_tracker.py  gen_robust_tracking.py  hue_person_segmentation_tracking.py  hue_person_torso_seg_tracking.py  hue_person_torso_seg_tracking_final.py  hue_person_tracking.py  mono_vslam_cv2.py  object_recognition_node.py  person_tracker_test.py  plots.ipynb  pose_estimation.csv  robust_matching.py  robust_old_color_tracking.py  robust_priority.py  robuster_matching.py  ros_yolo.py  run_docker.sh  simple_camera_getter.py  state_machine.py  test.py  test_pose_graph.py  test_swarm.py  yolo_impl_ocsort.py  yolo_impl_osnet.py
convergence-visualisation/: convergence-visualisation.py  main.py
convergence-visualisation/simulations/: area_sim.py  basic_sim.py  weights_sim.py
convergence-visualisation/src/: entities.py  planner.py  visualization.py  voronoi_utils.py
coverage/: pose_graph.py  run.py  run_coverage.py  test_pose_graph.py
coverage/convergence_visualization/: main.py  streamlit-test.py
lite-mono-8m_640x192/: depth.pth
old_sorts/: multi_camera_yolo.py  yolo.py  yolo_brown.py  yolo_impl.py  yolo_impl_people.py  yolo_impl_strongsort.py  yolo_imply_reid.py
output/: 0_labels.txt
src/tello_interfaces/: CMakeLists.txt  package.xml
src/tello_interfaces/msg/: DroneAction.msg  DroneStatus.msg  LocalPose.msg  Object.msg  TargetInfo.msg
(+23 files in other folders)
